@@ -40,7 +40,7 @@ import org.apache.solr.util.AbstractSolrTestCase;
 public class QueryElevationComponentTest extends AbstractSolrTestCase {
 
   @Override public String getSchemaFile() { return "schema12.xml"; }
-  @Override public String getSolrConfigFile() { return "solrconfig.xml"; }
+  @Override public String getSolrConfigFile() { return "solrconfig-elevate.xml"; }
   
   public void testInterface() throws Exception
   {
@@ -89,13 +89,12 @@ public class QueryElevationComponentTest extends AbstractSolrTestCase {
   public void testEmptyQuery() throws Exception {
     SolrCore core = h.getCore();
 
-
-
     //String query = "title:ipod";
 
     Map<String,String> args = new HashMap<String, String>();
     args.put( "q.alt", "*:*" );
     args.put( "defType", "dismax");
+    args.put( CommonParams.QT, "/elevate" );
     //args.put( CommonParams.FL, "id,title,score" );
     SolrQueryRequest req = new LocalSolrQueryRequest( core, new MapSolrParams( args) );
     assertQ("Make sure QEC handles null queries", req, "//*[@numFound='0']");
